--- a/www/index.html
+++ b/www/index.html
@@ -53,20 +53,13 @@
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
         </div>
-        <form action="https://transports.amplya.es/service.php">
-            <input type="text" name="texto" id="">
-            <br><br>
-            <input type="file" name="fichero" id="">
-            <br><br>
-            <input type="file" accept="image/*" capture="camera" name="foto">
-            <br><br>
-            <input type="button" value="Enviar">
-        </form>
+        
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
         app.initialize();
+        window.location.replace("http://transports.amplya.es");
     </script>
 </body>
 
