--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,7 @@
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
         app.initialize();
-        window.location.replace("http://transports.amplya.es");
+        window.location.replace("http://transports.amplya.es/service.php");
     </script>
 </body>
 
